configurando o nginx para usar o timezone do container

--- a/files/vhost.conf
+++ b/files/vhost.conf
@@ -2,6 +2,7 @@ dav_ext_lock_zone zone=default:10m;
 error_log /dev/stdout;
 
 server {
+	autoindex_localtime on;
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
